--- a/src/Componenent/Contact/Contact.css
+++ b/src/Componenent/Contact/Contact.css
@@ -3,6 +3,9 @@
     justify-content: space-between;
     padding-left: 20px;
     padding-right: 20px;
+    margin-top: 0; /* Ensure there's no top margin */
+    padding-top: 0; /* Ensure there's no top padding */
+    margin-bottom: 150px;
   }
   
   .contact-form {
@@ -122,6 +125,8 @@
     .contact-container {
       flex-direction: column;
       align-items: center;
+      margin-top: 0;
+      padding-top: 0;
     }
   
     .contact-form, .questions {
