make a contact form

--- a/src/Componenent/Sliders/Sliders.css
+++ b/src/Componenent/Sliders/Sliders.css
@@ -20,8 +20,10 @@
     margin-right: 20px;
     border: 1px solid rgb(51, 65, 85);
     border-radius: 8px;
-    border-end-end-radius:0 ;
+    border-end-start-radius:0 ;
+    border-bottom-right-radius: 0;
     border-bottom: none;
+    
     
    
 }
