--- a/src/Componenent/Contact/Contact.css
+++ b/src/Componenent/Contact/Contact.css
@@ -41,14 +41,14 @@
     cursor: pointer;
   }
   
-  .question-box p:first-of-type {
+  .question-box .question-text:first-of-type {
     font-weight: bold;
     margin-bottom: 10px;
     position: relative;
     display: inline-block;
   }
   
-  .question-box p:first-of-type::after {
+  .question-box .question-text:first-of-type::after {
     content: '';
     position: absolute;
     width: 0;
@@ -59,7 +59,7 @@
     transition: width 0.3s ease;
   }
   
-  .question-box p:first-of-type:hover::after {
+  .question-box .question-text:first-of-type:hover::after {
     width: 100%;
   }
 
@@ -118,6 +118,38 @@
   button.submit:hover {
     background-color: rgb(0, 56, 129, .5);
   }
+
+
+  .question-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.question-text {
+  margin: 0;
+  font-weight: 500;
+}
+
+.arrow {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border: solid rgb(190, 188, 188);
+  border-width: 2px 2px 0 0;
+  transform: rotate(45deg);
+  transition: transform 0.3s ease;
+}
+
+.arrow.down {
+  transform: rotate(135deg);
+}
+
+.arrow.up {
+  transform: rotate(-45deg);
+}
+
+
   
 
 
